[package]
name = "test_contract"
version = "0.1.0"
edition = "2021"
author = "MGdev93"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"

static_assertions = "1"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[profile.release]
codegen-units = 1

opt-level = "z"
lto = true
debug = false
panic = "abort"

overflow-checks = true
